--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                             <div class="text-sm text-gray-500">Users Supported</div>
                         </div>
                         <div>
-                            <div class="text-3xl font-bold text-white">40%</div>
+                            <div class="text-3xl font-bold text-white">80%</div>
                             <div class="text-sm text-gray-500">Efficiency Gain</div>
                         </div>
                     </div>
@@ -274,13 +274,15 @@
                             <h3 class="text-xl font-bold text-white">Ramiz Hussain</h3>
                             <p class="text-primary text-sm font-mono mt-1">Dubai, United Arab Emirates</p>
                             <div class="mt-6 flex gap-3">
-                                <span class="px-3 py-1 bg-white/5 rounded text-xs text-gray-300">Oracle ERP</span>
-                                <span class="px-3 py-1 bg-white/5 rounded text-xs text-gray-300">IoT</span>
+                                <span class="px-3 py-1 bg-white/5 rounded text-xs text-gray-300">Oracle-ERP</span>
+                                <span class="px-3 py-1 bg-white/5 rounded text-xs text-gray-300">IoT Engineer</span>
+                                <span class="px-3 py-1 bg-white/5 rounded text-xs text-gray-300">ICT Engineer</span>
+                                <span class="px-3 py-1 bg-white/5 rounded text-xs text-gray-300">HRMS Specialist</span>
                             </div>
                         </div>
 
                         <div class="absolute top-10 -left-4 glass px-4 py-2 rounded-lg animate-bounce" style="animation-duration: 3s;">
-                            <i class="fas fa-shield-alt text-green-400 mr-2"></i> <span class="text-sm font-semibold">Security</span>
+                            <i class="fas fa-shield-alt text-green-400 mr-2"></i> <span class="text-sm font-semibold">HRMS</span>
                         </div>
                         <div class="absolute bottom-20 -right-4 glass px-4 py-2 rounded-lg animate-bounce" style="animation-duration: 4s;">
                             <i class="fas fa-cloud text-blue-400 mr-2"></i> <span class="text-sm font-semibold">Cloud</span>
@@ -579,7 +581,7 @@
                     </div>
                     <div>
                         <h4 class="text-primary font-medium mb-2">Cloud & SaaS</h4>
-                        <p class="text-gray-400 text-sm">Microsoft Office 365, Odoo CRM</p>
+                        <p class="text-gray-400 text-sm">Microsoft Office 365</p>
                     </div>
                 </div>
                 <div class="mt-6 pt-6 border-t border-white/10">
