--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                             <h3 class="text-xl font-bold">Ramiz Hussain</h3>
                             <p class="text-primary text-sm font-mono mt-1">Dubai, United Arab Emirates</p>
                             <div class="mt-6 flex flex-wrap justify-center gap-2">
-                                <span class="px-3 py-1 bg-white/5 rounded text-xs">Oracle-ERP</span>
+                                <span class="px-3 py-1 bg-white/5 rounded text-xs">IT Business Application & Oracle ERP Specialist- Analyst </span>
                                 <span class="px-3 py-1 bg-white/5 rounded text-xs">IoT Engineer</span>
                                 <span class="px-3 py-1 bg-white/5 rounded text-xs">ICT Engineer</span>
                             </div>
@@ -661,7 +661,7 @@
                             <i class="fas fa-shield-alt text-green-400 mr-2"></i> <span class="text-sm font-semibold">HRMS</span>
                         </div>
                         <div class="absolute bottom-20 -right-4 glass px-4 py-2 rounded-lg animate-bounce" style="animation-duration: 4s;">
-                            <i class="fas fa-cloud text-blue-400 mr-2"></i> <span class="text-sm font-semibold">Cloud</span>
+                            <i class="fas fa-cloud text-blue-400 mr-2"></i> <span class="text-sm font-semibold">Oracle -ERP </span>
                         </div>
                         <div class="absolute top-1/2 -right-8 glass px-4 py-2 rounded-lg animate-bounce" style="animation-duration: 5s;">
                             <i class="fas fa-network-wired text-purple-400 mr-2"></i> <span class="text-sm font-semibold">Infra</span>
@@ -677,7 +677,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-display font-bold mb-4">Core <span class="text-gradient">Skills</span></h2>
-                <p class="text-gray-400 max-w-2xl mx-auto">Expertise across enterprise IT infrastructure, ERP systems, and cybersecurity</p>
+                <p class="text-gray-400 max-w-2xl mx-auto">Expertise across enterprise IT infrastructure, ERP systems, and cybersecurity Practices </p>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -1219,7 +1219,7 @@
                             </div>
                             <div>
                                 <h4 class="font-semibold">Email</h4>
-                                <a href="mailto:ramiz.hussain@example.com" class="opacity-60 hover:text-primary transition-colors">ramiz.hussain@example.com</a>
+                                <a href="mailto:ramiz.hussain786work+jobs@gmail.com" class="opacity-60 hover:text-primary transition-colors">ramiz.hussain786work+jobs@gmail.com</a>
                             </div>
                         </div>
                         
